[package]
name = "compactor_scheduler"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.68"
clap_blocks = { path = "../clap_blocks" }
data_types = { path = "../data_types" }
generated_types = { version = "0.1.0", path = "../generated_types" }
iox_catalog = { path = "../iox_catalog" }
tonic = { workspace = true }

[dev-dependencies]
